# serenity.sdk.python

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  azure-pipelines-br.yml  azure-pipelines-pr.yml  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/library-scripts/: post-create-steps.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml  release.yml
docs/source/: conf.py  index.rst  modules.rst  serenity_sdk.rst
examples/: check_access.py  introspect_model.py
notebooks/: demo_notebook.ipynb  derivatives_api_demo.ipynb  derivatives_api_demo_functionality.ipynb  derivatives_api_demo_option_pricing.ipynb  derivatives_api_demo_yield_curve_volatility_surface.ipynb  derivatives_api_evaluation.ipynb  derivatives_api_functionality.ipynb  factor_risk_api_demo.ipynb  init_demo.py  init_notebooks.ipynb  model_api_demo.ipynb  refdata_api_demo.ipynb  requirements.txt  scenario_api_demo.ipynb  valuation_api_demo.ipynb  var_api_demo.ipynb  var_api_helper.py
notebooks/sample_data/: list_options_20221202.csv
src/python/serenity_sdk/: __init__.py  auth.py  client.py  config.py  types.py  widgets.py
src/python/serenity_sdk/analytics/: options.py  rates.py
src/python/serenity_sdk/api/: core.py  model.py  pricing.py  provider.py  refdata.py  risk.py  scenarios.py  valuation.py
src/python/serenity_sdk/client/: __init__.py  raw.py
src/python/serenity_sdk/renderers/: connect_widget.py  plot.py  table.py
src/python/serenity_sdk/renderers/derivatives/: converters.py  overrides.py  reference_data.py  request_helpers.py  table_plot.py  widget_tools.py
src/python/serenity_sdk/types/: common.py  factors.py  refdata.py  valuation.py  var.py
tests/serenity_project/: test_dummy.py
tests/serenity_sdk/: risk_attrib_result_v1.json  risk_attrib_result_v2.json  risk_attrib_result_v3.json  test_client.py  test_compat.py  test_config.json  test_config.py  test_config_v2_dev.json  test_config_v2_prod.json  test_factor_risk.py
tests/serenity_sdk/renderers/: test_tables.py
