[metadata]
name = serenity-project
url = http://cloudwall.capital
version = file: VERSION.txt
description = TODO
long_description = file: README.md
author = Cloudwall Capital DevSecOps team
author_email = devsecops@cloudwall.capital

[options]
package_dir= =src/python
python_requires = >=3.8.*
namespace_packages = serenity_project
packages = find_namespace:
include_package_data = True
install_requires =
    requests

[options.packages.find]
where=src/python
include = serenity_project.*

[options.package_data]
* = 
    *.cfg

[flake8]
max-line-length = 120 